  * README, gplink/gplink.h, gputils/gplib.h, gputils/gpvc.h, gputils/gpdasm.h,
    gputils/gpvo.h, gputils/gpstrip.h, gpasm/gpasm.h:
    gputils is not ALPHA nor BETA software any more ;-)
  * AUTHORS: added Borut, '@' replaced with '.AT.'
  * doc/gputils.lyx, configure.ac, configure: version changed to 0.14.0
  * libgputils/gpcofflink.c: fixed typo

2011-10-23  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, libgputils/gpcofflink.c: fixed bug #3427278:
    BANKSEL is broken on PIC16F1936 in certain cases
  * gpasm/directive.c, libgputils/gpcoff.h, libgputils/gpcofflink.c,
    libgputils/gpprocessor.c: fixed bug #3376246: differs on second pass

2011-10-16  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/script.c, libgputils/gpcoffgen.c, libgputils/gpcoff.h,
    libgputils/gpreadobj.c, libgputils/gpcofflink.c, libgputils/gpcofflink.h:
    inplemeted SHADOW
  * doc/gputils.lyx: aded chapter "14 Bit Devices Enhanced Instruction Set"

2011-10-09  Marko Kohtala  <marko.kohtala@gmail.com>
  * libgputils/gpreadobj.c (gp_read_file): Revert previous change in
  determining file size as it does not compile.

2011-10-02  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/script.c, libgputils/gpreadobj.c, libgputils/gpcofflink.h:
    added LINEARMEM and SHADOW lkr support (currently merely ignored)

2011-09-29  Borut Razem  <borutr@users.sourceforge.net>
  * header/p18f13k22.inc, header/p18f14k22.inc, header/p18f87j11.inc:
    updated from MPASM v5.42; fixed bugs:
    #3401813: corrected header files
    and #3343718: Pic18F13k22 header file
  * ylwrap: added to svn

2011-09-28  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpopcode.c: added reset pic14e enhanced instruction
  * gpasm/testsuite/gpasm.project/asmfiles/op14e.asm,
    gpasm/testsuite/gpasm.project/hexfiles/op14e.hex,
    gpasm/testsuite/gpasm.project/listfiles/op14e.lst:
    added reset pic14e enhanced instruction regression test